# Deep-learning-ALS

./: .gitignore  README.md  config.yaml  experiment.py  pyproject.toml  refrences.txt  requirements.txt
configs/: cnn_nnmamba.yaml  cnn_vit.yaml
src/: experiment.py  splits.py
src/ViTModel/: README.md  colab_vit_runner.ipynb  dataset.py  evaluate_vit.py  model.py  paths.py  train_vit.py
src/als/: __init__.py  config.py  gpu.py  paths.py  sanity.py  seed.py  splits.py
src/als/data/: __init__.py  augment.py  feature_dataset.py  preprocessing.py  volume_dataset.py
src/als/models/: __init__.py  cnn_encoder.py  cnn_nnmamba.py  cnn_vit.py
src/als/stages/: __init__.py  _common.py  evaluate.py  extract_features.py  gradcam.py  train_cnn.py  train_nnmamba.py  train_vit.py
src/als/training/: __init__.py  checkpointing.py  metrics.py  optim.py  trainer.py
src/cnnModel/: dataLoader.py  model.py  train.ipynb  train.py  visualization.py
src/cnnModel/.ipynb_checkpoints/: train-checkpoint.ipynb
src/cnnModelMultiModality/: README.md  classifier.py  dataset.py  evaluate.py  featureExtractor.py  generate_features.py  generate_spatial_features.py  gradcam.py  paths.py  pipeline_and_visualization.ipynb  split_utils.py  train.ipynb  train.py  train_multimodal.py
src/nnMambaProject/: .gitignore  requirements.txt
src/nnMambaProject/configs/: default.yaml
src/nnMambaProject/docs/: setup.md
src/nnMambaProject/tests/: test_logic.py  test_model_import.py  test_pipeline.py
src/preprocessing/: preprocessing.py
tests/: conftest.py  test_augment.py  test_checkpointing.py  test_config_integration.py  test_dataset.py  test_eval_helpers.py  test_evaluate_oof.py  test_feature_dataset.py  test_metrics.py  test_models.py  test_preprocessing_pairing.py  test_splits.py  test_trainer.py  test_vit_dataset.py  test_vit_model.py  test_volume_dataset.py
(+8 files in other folders)
